# Greenhouse/server/Application/Interfaces/Infrastructure.Postgres/IWeatherStationRepository.cs
@@ -1,10 +1,0 @@
-using Core.Domain.Entities;
-
-namespace Application.Interfaces.Infrastructure.Postgres;
-
-public interface IWeatherStationRepository
-{
-    List<Devicelog> GetRecentLogs();
-    Devicelog AddDeviceLog(Devicelog devicelog);
-    Task DeleteAllData();
-}
