# Greenhouse/server/Application/Models/Dtos/BroadcastModels/AdminHasDeletedData.cs
@@ -1,0 +1,7 @@
+namespace Application.Models.Dtos.BroadcastModels
+{
+    public class AdminHasDeletedData : ApplicationBaseDto
+    {
+        public override string eventType { get; set; } = nameof(AdminHasDeletedData);
+    }
+}
